--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= @post %>
 <p>
   <strong>Title:</strong>
   <%= @post.title %>
@@ -11,15 +11,10 @@
 </p>
 
 <p>
-  <strong>Body:</strong>
-  <%= @post.users %>
+  <strong>Created by:</strong>
+  <%= @post.user&.email %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
-<br></br>
-<h2>Comments</h2>
-<div id="comments">
-  <%= render @post.comments %>
-  <%= render 'comments/new', post:@post %>
 </div>
